cif/org.eclipse.escet.cif.tests/tests/cif2yed/comp_param.relations.err
ERROR: Failed to generate a yEd relations diagram for CIF file "cif2yed/comp_param.cif".
CAUSE: CIF to yEd transformer failed due to unsatisfied preconditions:

  -------------------------------------------------------
  (1/1) A component definition has a component parameter.
  -------------------------------------------------------
   * In group definition "g1.G2":
     - group def G2(g6.G7 p3):
                          ^
